--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Ejemplo Git</h1>
     <h1>Ejemplo Git</h1>
+    <h1>Ejemplo Git</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores pariatur temporibus repellat minus? Cupiditate, tenetur cum ipsa impedit, est atque sunt quae, blanditiis accusamus alias deserunt aut voluptatibus ipsam dignissimos.</p>
 </body>
 </html>
