--- a/index.html
+++ b/index.html
@@ -20,21 +20,17 @@
     </a>
     <h1>Ejemplo Git</h1>
     <h1>Ejemplo Git</h1>
-<<<<<<< HEAD
+<!-- Head -->
     <h2>Estamos probando cambios en el archivo</h2>
 =======
     <h1>Ejemplo Git</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo a commodi culpa nisi necessitatibus. Inventore nostrum dolorem magni. Atque neque quod assumenda maiores aliquam numquam dolore corporis minus necessitatibus a!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores pariatur temporibus repellat minus? Cupiditate, tenetur cum ipsa impedit, est atque sunt quae, blanditiis accusamus alias deserunt aut voluptatibus ipsam dignissimos.</p>
-<<<<<<< HEAD
     <a href="imagenes/ima1.jpg">
         <img src="imagenes/ima1.jpg" alt="ima1">
     </a>
     <a href="imagenes/ima2.jpg">
         <img src="imagenes/ima2.jpg" alt="ima2">
     </a>
-=======
->>>>>>> 001afc4afb2c17586cecd4091b923fe8e4572bb8
->>>>>>> 540f650aa87e81aa4f7cdabe2b0719396d95900d
 </body>
 </html>
