--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <h2>Estamos probando cambios en el archivo</h2>
 =======
     <h1>Ejemplo Git</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quos laudantium id! Dignissimos saepe repudiandae sequi dolorum maxime dolor. Aperiam iste voluptatem accusantium in expedita! Deleniti error reprehenderit ab exercitationem?git</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo a commodi culpa nisi necessitatibus. Inventore nostrum dolorem magni. Atque neque quod assumenda maiores aliquam numquam dolore corporis minus necessitatibus a!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores pariatur temporibus repellat minus? Cupiditate, tenetur cum ipsa impedit, est atque sunt quae, blanditiis accusamus alias deserunt aut voluptatibus ipsam dignissimos.</p>
     <a href="imagenes/ima1.jpg">
