--- a/index.html
+++ b/index.html
@@ -60,11 +60,51 @@
         <a href="IMAGENES/damas/dama20.jpg"></a>
         <img src="IMAGENES/damas/dama20.jpg" alt="Dama 20" width="200">
 
+        <h2>Ropa para Niñas</h2>
+        <a href="IMAGENES/niñas/niña1.jpg"></a>
+        <img src="IMAGENES/niñas/niña1.jpg" alt="Niña 1" width="200">
+        <a href="IMAGENES/niñas/niña2.jpg"></a>
+        <img src="IMAGENES/niñas/niña2.jpg" alt="Niña 2" width="200">
+        <a href="IMAGENES/niñas/niña3.jpg"></a>
+        <img src="IMAGENES/niñas/niña3.jpg" alt="Niña 3" width="200">
+        <a href="IMAGENES/niñas/niña4.jpg"></a>
+        <img src="IMAGENES/niñas/niña4.jpg" alt="Niña 4" width="200">
+        <a href="IMAGENES/niñas/niña5.jpg"></a>
+        <img src="IMAGENES/niñas/niña5.jpg" alt="Niña 5" width="200">
+        <a href="IMAGENES/niñas/niña6.jpg"></a>
+        <img src="IMAGENES/niñas/niña6.jpg" alt="Niña 6" width="200">
+        <a href="IMAGENES/niñas/niña7.jpg"></a>
+        <img src="IMAGENES/niñas/niña7.jpg" alt="Niña 7" width="200">
+        <a href="IMAGENES/niñas/niña8.jpg"></a>
+        <img src="IMAGENES/niñas/niña8.jpg" alt="Niña 8" width="200">
+        <a href="IMAGENES/niñas/niña9.jpg"></a>
+        <img src="IMAGENES/niñas/niña9.jpg" alt="Niña 9" width="200">
+        <a href="IMAGENES/niñas/niña10.jpg"></a>
+        <img src="IMAGENES/niñas/niña10.jpg" alt="Niña 10" width="200">
+        <a href="IMAGENES/niñas/niña11.jpg"></a>
+        <img src="IMAGENES/niñas/niña11.jpg" alt="Niña 11" width="200">
+        <a href="IMAGENES/niñas/niña12.jpg"></a>
+        <img src="IMAGENES/niñas/niña12.jpg" alt="Niña 12" width="200">
+        <a href="IMAGENES/niñas/niña13.jpg"></a>
+        <img src="IMAGENES/niñas/niña13.jpg" alt="Niña 13" width="200">
+        <a href="IMAGENES/niñas/niña14.jpg"></a>
+        <img src="IMAGENES/niñas/niña14.jpg" alt="Niña 14" width="200"> 
+        <a href="IMAGENES/niñas/niña15.jpg"></a>
+        <img src="IMAGENES/niñas/niña15.jpg" alt="Niña 15" width="200">
+        <a href="IMAGENES/niñas/niña16.jpg"></a>
+        <img src="IMAGENES/niñas/niña16.jpg" alt="Niña 16" width="200">
+        <a href="IMAGENES/niñas/niña17.jpg"></a>
+        <img src="IMAGENES/niñas/niña17.jpg" alt="Niña 17" width="200">
+        <a href="IMAGENES/niñas/niña18.jpg"></a>
+        <img src="IMAGENES/niñas/niña18.jpg" alt="Niña 18" width="200">
+        <a href="IMAGENES/niñas/niña19.jpg"></a>
+        <img src="IMAGENES/niñas/niña19.jpg" alt="Niña 19" width="200">
+        <a href="IMAGENES/niñas/niña20.jpg"></a>
+        <img src="IMAGENES/niñas/niña20.jpg" alt="Niña 20" width="200">
+        
     </a>
 
     <div>
-        <h1>Ejemplo Git</h1>
-        <h2>Estamos probando cambios en el archivo</h2>
     
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quos laudantium id! Dignissimos saepe repudiandae sequi dolorum maxime dolor. Aperiam iste voluptatem accusantium in expedita! Deleniti error reprehenderit ab exercitationem?git</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo a commodi culpa nisi necessitatibus. Inventore nostrum dolorem magni. Atque neque quod assumenda maiores aliquam numquam dolore corporis minus necessitatibus a!</p>
