--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>RE-VISTETE</h1>
     <h2>Ropa para Damas</h2>
+    <div class="galeria">
     <a href="IMAGENES/vestido1.jpg">
         <img src="IMAGENES/vestido1.jpg" alt="Vestido 1" width="200">
     </a>
@@ -61,49 +62,49 @@
         <img src="IMAGENES/damas/dama20.jpg" alt="Dama 20" width="200">
 
         <h2>Ropa para Niñas</h2>
-        <a href="IMAGENES/niñas/niña1.jpg"></a>
-        <img src="IMAGENES/niñas/niña1.jpg" alt="Niña 1" width="200">
-        <a href="IMAGENES/niñas/niña2.jpg"></a>
-        <img src="IMAGENES/niñas/niña2.jpg" alt="Niña 2" width="200">
-        <a href="IMAGENES/niñas/niña3.jpg"></a>
-        <img src="IMAGENES/niñas/niña3.jpg" alt="Niña 3" width="200">
-        <a href="IMAGENES/niñas/niña4.jpg"></a>
-        <img src="IMAGENES/niñas/niña4.jpg" alt="Niña 4" width="200">
-        <a href="IMAGENES/niñas/niña5.jpg"></a>
-        <img src="IMAGENES/niñas/niña5.jpg" alt="Niña 5" width="200">
-        <a href="IMAGENES/niñas/niña6.jpg"></a>
-        <img src="IMAGENES/niñas/niña6.jpg" alt="Niña 6" width="200">
-        <a href="IMAGENES/niñas/niña7.jpg"></a>
-        <img src="IMAGENES/niñas/niña7.jpg" alt="Niña 7" width="200">
-        <a href="IMAGENES/niñas/niña8.jpg"></a>
-        <img src="IMAGENES/niñas/niña8.jpg" alt="Niña 8" width="200">
-        <a href="IMAGENES/niñas/niña9.jpg"></a>
-        <img src="IMAGENES/niñas/niña9.jpg" alt="Niña 9" width="200">
-        <a href="IMAGENES/niñas/niña10.jpg"></a>
-        <img src="IMAGENES/niñas/niña10.jpg" alt="Niña 10" width="200">
-        <a href="IMAGENES/niñas/niña11.jpg"></a>
-        <img src="IMAGENES/niñas/niña11.jpg" alt="Niña 11" width="200">
-        <a href="IMAGENES/niñas/niña12.jpg"></a>
-        <img src="IMAGENES/niñas/niña12.jpg" alt="Niña 12" width="200">
-        <a href="IMAGENES/niñas/niña13.jpg"></a>
-        <img src="IMAGENES/niñas/niña13.jpg" alt="Niña 13" width="200">
-        <a href="IMAGENES/niñas/niña14.jpg"></a>
-        <img src="IMAGENES/niñas/niña14.jpg" alt="Niña 14" width="200"> 
-        <a href="IMAGENES/niñas/niña15.jpg"></a>
-        <img src="IMAGENES/niñas/niña15.jpg" alt="Niña 15" width="200">
-        <a href="IMAGENES/niñas/niña16.jpg"></a>
-        <img src="IMAGENES/niñas/niña16.jpg" alt="Niña 16" width="200">
-        <a href="IMAGENES/niñas/niña17.jpg"></a>
-        <img src="IMAGENES/niñas/niña17.jpg" alt="Niña 17" width="200">
-        <a href="IMAGENES/niñas/niña18.jpg"></a>
-        <img src="IMAGENES/niñas/niña18.jpg" alt="Niña 18" width="200">
-        <a href="IMAGENES/niñas/niña19.jpg"></a>
-        <img src="IMAGENES/niñas/niña19.jpg" alt="Niña 19" width="200">
-        <a href="IMAGENES/niñas/niña20.jpg"></a>
-        <img src="IMAGENES/niñas/niña20.jpg" alt="Niña 20" width="200">
-        
-    </a>
+        <a href="IMAGENES/damas/niñas/niña1.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña1.jpg" alt="Niña 1" width="200">
+        <a href="IMAGENES/damas/niñas/niña2.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña2.jpg" alt="Niña 2" width="200">
+        <a href="IMAGENES/damas/niñas/niña3.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña3.jpg" alt="Niña 3" width="200">
+        <a href="IMAGENES/damas/niñas/niña4.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña4.jpg" alt="Niña 4" width="200">
+        <a href="IMAGENES/damas/niñas/niña5.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña5.jpg" alt="Niña 5" width="200">
+        <a href="IMAGENES/damas/niñas/niña6.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña6.jpg" alt="Niña 6" width="200">
+        <a href="IMAGENES/damas/niñas/niña7.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña7.jpg" alt="Niña 7" width="200">
+        <a href="IMAGENES/damas/niñas/niña8.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña8.jpg" alt="Niña 8" width="200">
+        <a href="IMAGENES/damas/niñas/niña9.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña9.jpg" alt="Niña 9" width="200">
+        <a href="IMAGENES/damas/niñas/niña10.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña10.jpg" alt="Niña 10" width="200">
+        <a href="IMAGENES/damas/niñas/niña11.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña11.jpg" alt="Niña 11" width="200">
+        <a href="IMAGENES/damas/niñas/niña12.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña12.jpg" alt="Niña 12" width="200">
+        <a href="IMAGENES/damas/niñas/niña13.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña13.jpg" alt="Niña 13" width="200">
+        <a href="IMAGENES/damas/niñas/niña14.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña14.jpg" alt="Niña 14" width="200"> 
+        <a href="IMAGENES/damas/niñas/niña15.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña15.jpg" alt="Niña 15" width="200">
+        <a href="IMAGENES/damas/niñas/niña16.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña16.jpg" alt="Niña 16" width="200">
+        <a href="IMAGENES/damas/niñas/niña17.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña17.jpg" alt="Niña 17" width="200">
+        <a href="IMAGENES/damas/niñas/niña18.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña18.jpg" alt="Niña 18" width="200">
+        <a href="IMAGENES/damas/niñas/niña19.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña19.jpg" alt="Niña 19" width="200">
+        <a href="IMAGENES/damas/niñas/niña20.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña20.jpg" alt="Niña 20" width="200">
 
+    </a>
+    </div>
     <div>
     
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quos laudantium id! Dignissimos saepe repudiandae sequi dolorum maxime dolor. Aperiam iste voluptatem accusantium in expedita! Deleniti error reprehenderit ab exercitationem?git</p>
