--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>RE-VISTETE</h1>
+
     <h2>Ropa para Damas</h2>
+
     <div class="galeria">
     <a href="IMAGENES/vestido1.jpg">
         <img src="IMAGENES/vestido1.jpg" alt="Vestido 1" width="200">
@@ -47,10 +49,10 @@
         <a href="IMAGENES/damas/dama13.jpg"></a>
         <img src="IMAGENES/damas/dama13.jpg" alt="Dama 13" width="200">
         <a href="IMAGENES/damas/dama14.jpg"></a>
-        <a href="IMAGENES/damas/dama15.jpg"></a>
         <img src="IMAGENES/damas/dama14.jpg" alt="Dama 14" width="200">
-        <a href="IMAGENES/damas/dama16.jpg"></a>
+        <a href="IMAGENES/damas/dama15.jpg"></a>
         <img src="IMAGENES/damas/dama15.jpg" alt="Dama 15" width="200">
+        <a href="IMAGENES/damas/dama16.jpg"></a>
         <img src="IMAGENES/damas/dama16.jpg" alt="Dama 16" width="200">
         <a href="IMAGENES/damas/dama17.jpg"></a>
         <img src="IMAGENES/damas/dama17.jpg" alt="Dama 17" width="200">
@@ -60,8 +62,42 @@
         <img src="IMAGENES/damas/dama19.jpg" alt="Dama 19" width="200">
         <a href="IMAGENES/damas/dama20.jpg"></a>
         <img src="IMAGENES/damas/dama20.jpg" alt="Dama 20" width="200">
+        </div>
+        
+        <hr style="border: 2px solid black;">
+
+        <h2>zapatos para damas</h2>
+
+        <div class="galeria">
+        <a href="IMAGENES/damas/zapatos/zapa1.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa1.jpg" alt="Zapato 1" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa2.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa2.jpg" alt="Zapato 2" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa3.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa3.jpg" alt="Zapato 3" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa4.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa4.jpg" alt="Zapato 4" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa5.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa5.jpg" alt="Zapato 5" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa6.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa6.jpg" alt="Zapato 6" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa7.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa7.jpg" alt="Zapato 7" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa8.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa8.jpg" alt="Zapato 8" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa9.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa9.jpg" alt="Zapato 9" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa10jpg.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa10jpg.jpg alt="Zapato 10" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa11.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa11.jpg" alt="Zapato 11" width="200">
+        </div>
+
+        <hr style="border: 2px solid black;">
 
         <h2>Ropa para Niñas</h2>
+
+    <div class="galeria">
         <a href="IMAGENES/damas/niñas/niña1.jpg"></a>
         <img src="IMAGENES/damas/niñas/niña1.jpg" alt="Niña 1" width="200">
         <a href="IMAGENES/damas/niñas/niña2.jpg"></a>
@@ -102,15 +138,36 @@
         <img src="IMAGENES/damas/niñas/niña19.jpg" alt="Niña 19" width="200">
         <a href="IMAGENES/damas/niñas/niña20.jpg"></a>
         <img src="IMAGENES/damas/niñas/niña20.jpg" alt="Niña 20" width="200">
-
     </a>
     </div>
-    <div>
-    
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quos laudantium id! Dignissimos saepe repudiandae sequi dolorum maxime dolor. Aperiam iste voluptatem accusantium in expedita! Deleniti error reprehenderit ab exercitationem?git</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo a commodi culpa nisi necessitatibus. Inventore nostrum dolorem magni. Atque neque quod assumenda maiores aliquam numquam dolore corporis minus necessitatibus a!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores pariatur temporibus repellat minus? Cupiditate, tenetur cum ipsa impedit, est atque sunt quae, blanditiis accusamus alias deserunt aut voluptatibus ipsam dignissimos.</p>
+    <hr style="border: 2px solid black;">
+
+    <h2>Zapatos para Niñas</h2>
+
+    <div class="galeria">
+    <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina1.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina1.jpg" alt="Zapato Niña 1" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina2.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina2.jpg" alt="Zapato Niña 2" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina3.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina3.jpg" alt="Zapato Niña 3" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina4.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina4.jpg" alt="Zapato Niña 4" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina5.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina5.jpg" alt="Zapato Niña 5" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina6.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina6.jpg" alt="Zapato Niña 6" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina7.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina7.jpg" alt="Zapato Niña 7" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina8.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina8.jpg" alt="Zapato Niña 8" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina9.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina9.jpg" alt="Zapato Niña 9" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina10.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina10.jpg" alt="Zapato Niña 10" width="200">
+
     </div>
+
 
 </body>
 </html>
