--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="ejemplo.css">
     <title>RE-VISTETE</title>
 </head>
 <body>
@@ -63,7 +64,7 @@
         <a href="IMAGENES/damas/dama20.jpg"></a>
         <img src="IMAGENES/damas/dama20.jpg" alt="Dama 20" width="200">
         </div>
-        
+
         <hr style="border: 2px solid black;">
 
         <h2>zapatos para damas</h2>
