--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         <img src="IMAGENES/damas/zapatos/zapa8.jpg" alt="Zapato 8" width="200">
         <a href="IMAGENES/damas/zapatos/zapa9.jpg"></a>
         <img src="IMAGENES/damas/zapatos/zapa9.jpg" alt="Zapato 9" width="200">
-        <a href="IMAGENES/damas/zapatos/zapa10jpg.jpg"></a>
-        <img src="IMAGENES/damas/zapatos/zapa10jpg.jpg alt="Zapato 10" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa10.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa10.jpg" alt="Zapato 10" width="200">
         <a href="IMAGENES/damas/zapatos/zapa11.jpg"></a>
         <img src="IMAGENES/damas/zapatos/zapa11.jpg" alt="Zapato 11" width="200">
         </div>
