--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
         <img src="IMAGENES/damas/dama19.jpg" alt="Dama 19" width="200">
         <a href="IMAGENES/damas/dama20.jpg"></a>
         <img src="IMAGENES/damas/dama20.jpg" alt="Dama 20" width="200">
+        <a href="IMAGENES/damas/dama21.jpg"></a>
+        <img src="IMAGENES/damas/dama21.jpg" alt="Dama 21" width="200">
+        <a href="IMAGENES/damas/dama22.jpg"></a>
+        <img src="IMAGENES/damas/dama22.jpg" alt="Dama 22" width="200">
+        <a href="IMAGENES/damas/dama23.jpg"></a>
+        <img src="IMAGENES/damas/dama23.jpg" alt="Dama 23" width="200">
+        <a href="IMAGENES/damas/dama24.jpg"></a>
+        <img src="IMAGENES/damas/dama24.jpg" alt="Dama 24" width="200">
         </div>
 
         <hr style="border: 2px solid black;">
@@ -92,6 +100,35 @@
         <img src="IMAGENES/damas/zapatos/zapa10.jpg" alt="Zapato 10" width="200">
         <a href="IMAGENES/damas/zapatos/zapa11.jpg"></a>
         <img src="IMAGENES/damas/zapatos/zapa11.jpg" alt="Zapato 11" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa12.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa12.jpg" alt="Zapato 12" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa13.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa13.jpg" alt="Zapato 13" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa14.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa14.jpg" alt="Zapato 14" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa15.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa15.jpg" alt="Zapato 15" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa16.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa16.jpg" alt="Zapato 16" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa17.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa17.jpg" alt="Zapato 17" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa18.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa18.jpg" alt="Zapato 18" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa19.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa19.jpg" alt="Zapato 19" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa20.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa20.jpg" alt="Zapato 20" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa21.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa21.jpg" alt="Zapato 21" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa22.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa22.jpg" alt="Zapato 22" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa23.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa23.jpg" alt="Zapato 23" width="200">
+        <a href="IMAGENES/damas/zapatos/zapa24.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapa24.jpg" alt="Zapato 24" width="200">
+    </a>
+    </div>
+
         </div>
 
         <hr style="border: 2px solid black;">
@@ -139,6 +176,14 @@
         <img src="IMAGENES/damas/niñas/niña19.jpg" alt="Niña 19" width="200">
         <a href="IMAGENES/damas/niñas/niña20.jpg"></a>
         <img src="IMAGENES/damas/niñas/niña20.jpg" alt="Niña 20" width="200">
+        <a href="IMAGENES/damas/niñas/niña21.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña21.jpg" alt="Niña 21" width="200">
+        <a href="IMAGENES/damas/niñas/niña22.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña22.jpg" alt="Niña 22" width="200">
+        <a href="IMAGENES/damas/niñas/niña23.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña23.jpg" alt="Niña 23" width="200">
+        <a href="IMAGENES/damas/niñas/niña24.jpg"></a>
+        <img src="IMAGENES/damas/niñas/niña24.jpg" alt="Niña 24" width="200">
     </a>
     </div>
     <hr style="border: 2px solid black;">
@@ -166,7 +211,34 @@
         <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina9.jpg" alt="Zapato Niña 9" width="200">
         <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina10.jpg"></a>
         <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina10.jpg" alt="Zapato Niña 10" width="200">
-
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina11.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina11.jpg" alt="Zapato Niña 11" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina12.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina12.jpg" alt="Zapato Niña 12" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina13.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina13.jpg" alt="Zapato Niña 13" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina14.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina14.jpg" alt="Zapato Niña 14" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina15.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina15.jpg" alt="Zapato Niña 15" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina16.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina16.jpg" alt="Zapato Niña 16" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina17.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina17.jpg" alt="Zapato Niña 17" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina18.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina18.jpg" alt="Zapato Niña 18" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina19.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina19.jpg" alt="Zapato Niña 19" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina20.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina20.jpg" alt="Zapato Niña 20" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina21.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina21.jpg" alt="Zapato Niña 21" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina22.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina22.jpg" alt="Zapato Niña 22" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina23.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina23.jpg" alt="Zapato Niña 23" width="200">
+        <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina24.jpg"></a>
+        <img src="IMAGENES/damas/zapatos/zapatos_niñas/zanina24.jpg" alt="Zapato Niña 24" width="200">
     </div>
 
 
