--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>RE-VISTETE</h1>
 
+    <hr style="border: 2px solid rgb(226, 142, 174);">
     <h2>Ropa para Damas</h2>
+    <hr style="border: 2px solid rgb(226, 142, 174);">
 
     <div class="galeria">
     <a href="IMAGENES/vestido1.jpg">
@@ -73,9 +75,9 @@
         <img src="IMAGENES/damas/dama24.jpg" alt="Dama 24" width="200">
         </div>
 
-        <hr style="border: 2px solid black;">
-
+        <hr style="border: 2px solid rgb(226, 142, 174);">
         <h2>zapatos para damas</h2>
+        <hr style="border: 2px solid rgb(226, 142, 174);">
 
         <div class="galeria">
         <a href="IMAGENES/damas/zapatos/zapa1.jpg"></a>
@@ -131,9 +133,9 @@
 
         </div>
 
-        <hr style="border: 2px solid black;">
-
+        <hr style="border: 2px solid rgb(226, 142, 174);">
         <h2>Ropa para Niñas</h2>
+        <hr style="border: 2px solid rgb(226, 142, 174);">
 
     <div class="galeria">
         <a href="IMAGENES/damas/niñas/niña1.jpg"></a>
@@ -186,9 +188,10 @@
         <img src="IMAGENES/damas/niñas/niña24.jpg" alt="Niña 24" width="200">
     </a>
     </div>
-    <hr style="border: 2px solid black;">
-
+    
+    <hr style="border: 2px solid rgb(226, 142, 174);">
     <h2>Zapatos para Niñas</h2>
+    <hr style="border: 2px solid rgb(226, 142, 174);">
 
     <div class="galeria">
     <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina1.jpg"></a>
