--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>RE-VISTETE</title>
 </head>
 <body>
-    <h1>RE-VISTETE</h1>
+    <h1 class="titulo">RE-VISTETE</h1>
+    <hr class="linea-separadora">
 
-    <hr style="border: 2px solid rgb(226, 142, 174);">
-    <h2>Ropa para Damas</h2>
-    <hr style="border: 2px solid rgb(226, 142, 174);">
+    <hr class="linea-separadora">
+    <h2 class="subtitulo">Ropa para Damas</h2>
+    <hr class="linea-separadora">
 
     <div class="galeria">
     <a href="IMAGENES/vestido1.jpg">
@@ -75,9 +76,9 @@
         <img src="IMAGENES/damas/dama24.jpg" alt="Dama 24" width="200">
         </div>
 
-        <hr style="border: 2px solid rgb(226, 142, 174);">
-        <h2>zapatos para damas</h2>
-        <hr style="border: 2px solid rgb(226, 142, 174);">
+        <hr class="linea-separadora">
+        <h2 class="subtitulo">zapatos para damas</h2>
+        <hr class="linea-separadora">
 
         <div class="galeria">
         <a href="IMAGENES/damas/zapatos/zapa1.jpg"></a>
@@ -133,9 +134,9 @@
 
         </div>
 
-        <hr style="border: 2px solid rgb(226, 142, 174);">
-        <h2>Ropa para Niñas</h2>
-        <hr style="border: 2px solid rgb(226, 142, 174);">
+        <hr class="linea-separadora">
+        <h2 class="subtitulo">Ropa para Niñas</h2>
+        <hr class="linea-separadora">
 
     <div class="galeria">
         <a href="IMAGENES/damas/niñas/niña1.jpg"></a>
@@ -188,10 +189,10 @@
         <img src="IMAGENES/damas/niñas/niña24.jpg" alt="Niña 24" width="200">
     </a>
     </div>
-    
-    <hr style="border: 2px solid rgb(226, 142, 174);">
-    <h2>Zapatos para Niñas</h2>
-    <hr style="border: 2px solid rgb(226, 142, 174);">
+
+    <hr class="linea-separadora">
+    <h2 class="subtitulo">Zapatos para Niñas</h2>
+    <hr class="linea-separadora">
 
     <div class="galeria">
     <a href="IMAGENES/damas/zapatos/zapatos_niñas/zanina1.jpg"></a>
