--- a/index.html
+++ b/index.html
@@ -7,12 +7,32 @@
     <title>RE-VISTETE</title>
 </head>
 <body>
-    <h1 class="titulo">RE-VISTETE</h1>
-    <hr class="linea-separadora">
+    
+    <div id="contenedorbotones">
+        <button class="boton">Registrate</button>
+        <button class="boton">Iniciar Sesión</button>
+        <button class="boton">Carrito de Compras</button>
+        <button class="boton">Contacto</button>
+        <button class="boton">Ofertas</button>
+        <button class="boton">Ayuda</button>
+    </div>
+    <header class="logo-container">
+    <div class="logo-title">
+    <!-- Aquí va tu logo -->
+    <a href="IMAGENES/damas/logo.png">
+    <img src="IMAGENES/damas/logo.png" alt="Logo Re-vístete" width="200" height="200">
+    </a>
+    </div>
+    <div class="title-container">
+    <h1 class="title">Re- <br>vístete</h1>
+    </div>
+    <p class="slogan">outlet de 2ª</p>
+    <hr class="divider">
+    </header>
+    
 
-    <hr class="linea-separadora">
-    <h2 class="subtitulo">Ropa para Damas</h2>
-    <hr class="linea-separadora">
+    <div class="contenido">
+        <h2 class="subtitulo">Ropa para Damas</h2>
 
     <div class="galeria">
     <a href="IMAGENES/vestido1.jpg">
