--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Ejemplo Git</title>
 </head>
 <body>
+
+    <a href="IMAGENES/vestido1.jpg">
+        <img src="IMAGENES/logo.png" alt="logo" width="200">
     <a href="IMAGENES/vestido1.jpg">
         <img src="IMAGENES/vestido1.jpg" alt="Vestido 1" width="200">
     </a>
