--- a/index.html
+++ b/index.html
@@ -3,29 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplo Git</title>
+    <title>Re-Vistete</title>
 </head>
 <body>
 
-    <a href="IMAGENES/vestido1.jpg">
+    <a href="IMAGENES/logo.png">
         <img src="IMAGENES/logo.png" alt="logo" width="200">
-    <a href="IMAGENES/vestido1.jpg">
-        <img src="IMAGENES/vestido1.jpg" alt="Vestido 1" width="200">
-    </a>
-    <a href="IMAGENES/vestido2.jfif">
-        <img src="IMAGENES/vestido2.jfif" alt="Vestido 2" width="200">
-    </a>
-    <a href="IMAGENES/vestido3.jfif">
-        <img src="IMAGENES/vestido3.jfif" alt="Vestido 3" width="200"
-    
-    <a href="IMAGENES/vestido4.jpg">
-        <img src="IMAGENES/vestido4.jpg" alt="Vestido 4" width="200">
-    </a> <br>  
-    <a href="imagenes/ima1.jpg">
-        <img src="imagenes/ima1.jpg" alt="ima1">
-    </a>
-    <a href="imagenes/ima2.jpg">
-        <img src="imagenes/ima2.jpg" alt="ima2">
     </a>
 </body>
 </html>
