--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Re-Vistete</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Re-Vistete</title>
+  <!-- Vinculo a tu archivo CSS externo -->
+  <link rel="stylesheet" href="CSS/estilos.css">
 </head>
 <body>
 
-    <a href="IMAGENES/logo.png">
-        <img src="IMAGENES/logo.png" alt="logo" width="200">
-    </a>
+  <a href="index.html">
+    <!-- SVG embebido directamente (reemplaza el contenido con tu logo real) -->
+    <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+      <path d="M10 10 H 90 V 90 H 10 Z" />
+    </svg>
+  </a>
+
 </body>
 </html>
