--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
       <path d="M10 10 H 90 V 90 H 10 Z" />
     </svg>
+    <a href="IMAGENES/damas/dama1.jpg"></a>
+    <img src="IMAGENES/damas/dama1.jpg" alt="dama1">
   </a>
 
 </body>
