--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Re-Vistete</title>
   <!-- Vinculo a tu archivo CSS externo -->
-  <link rel="stylesheet" href="CSS/estilos.css">
+  <link rel="stylesheet" href="ejemplo.css">
 </head>
 <body>
 
