--- a/index.html
+++ b/index.html
@@ -4,19 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Re-Vistete</title>
-  <!-- Vinculo a tu archivo CSS externo -->
-  <link rel="stylesheet" href="ejemplo.css">
+  <link rel="stylesheet" href="efectos.css">
 </head>
 <body>
-
-  <a href="index.html">
-    <!-- SVG embebido directamente (reemplaza el contenido con tu logo real) -->
-    <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-      <path d="M10 10 H 90 V 90 H 10 Z" />
-    </svg>
-    <a href="IMAGENES/damas/dama1.jpg"></a>
-    <img src="IMAGENES/damas/dama1.jpg" alt="dama1">
-  </a>
-
+  <header>
+        <h1 class="title">Categorias</h1>
+  </header>
+    <main>
+        <section class="gallery" aria-label="Categorias">
+            <div class="card logo"><img src="IMAGENES/logo.png" alt="Logo"></div>
+              <div class="logo-mask"></div>
+    </main>
 </body>
 </html>
