necesito git commit "buscando "

--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
     <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
       <path d="M10 10 H 90 V 90 H 10 Z" />
     </svg>
-    <a href="IMAGENES/damas/dama1.jpg"></a>
-    <img src="IMAGENES/damas/dama1.jpg" alt="dama1">
   </a>
+
+  <div class= "galeria"
+  <a href="IMAGENES/damas/dama1.jpg"></a>
+  <img src="IMAGENES/damas/dama1.jpgm" alt="dama1">
+  <a href="IMAGENES/damas/dama2.jpg"></a>
+  <img src="IMAGENES/damas/dama2.jpg" alt="dama2">
+  
+    </div>
 
 </body>
 </html>
