--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   </header>
     <main>
         <section class="gallery" aria-label="Categorias">
-            <div class="card logo"><img src="IMAGENES/logo.png" alt="Logo"></div>
-              <div class="logo-mask"></div>
+            <div class="card logo"><img src="IMAGENES/logo a color sin fondo.png" alt="Logo"></div>
     </main>
 </body>
 </html>
