--- a/index.html
+++ b/index.html
@@ -6,13 +6,32 @@
   <title>Re-Vistete</title>
   <link rel="stylesheet" href="efectos.css">
 </head>
-<body>
-  <header>
+<header>
         <h1 class="title">Categorias</h1>
   </header>
     <main>
         <section class="gallery" aria-label="Categorias">
             <div class="card logo"><img src="IMAGENES/logo a color sin fondo.png" alt="Logo"></div>
+<body>
+  <div class="container">
+    <a href="comprar.html" class="card">
+      <h2>COMPRAR</h2>
+      <img src="IMAGENES/logo comprar.webp" alt="Comprar">
+      <p>Al darle una segunda vida a la ropa, reduces residuos, ahorras agua y frenas la locura del fast fashion.</p>
+    </a>
+
+    <a href="vender.html" class="card">
+      <h2>VENDER</h2>
+      <img src="IMAGENES/logo vender.png" alt="Vender">
+      <p>Esa chaqueta que ya no va contigo puede ser el nuevo favorito de alguien más. ¡Y tú te llevas una ganancia!</p>
+    </a>
+
+    <a href="donar.html" class="card">
+      <h2>DONAR</h2>
+      <img src="IMAGENES/logo donar.png" alt="Donar">
+      <p>No todo se vende, y eso está bien. Donar es darle una segunda vida a tu ropa mientras haces una buena acción.</p>
+    </a>
+  </div>
     </main>
 </body>
 </html>
