--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="efectos.css">
 </head>
 <header>
-        <h1 class="title">Categorias</h1>
+        <h1 class="title">Categorias</h1>C:\Users\Vanesa Tascon\Documents\GitHub\ejemplogit\ejemplogit
   </header>
     <main>
         <section class="gallery" aria-label="Categorias">
@@ -29,6 +29,7 @@
     <a href="donar.html" class="card">
       <h2>DONAR</h2>
       <img src="IMAGENES/logo donar.png" alt="Donar">
+      <p>No todo se vende, y eso está bien. Donar es darle una segunda vida a tu ropa mientras haces una buena acción.</p>
       <p>No todo se vende, y eso está bien. Donar es darle una segunda vida a tu ropa mientras haces una buena acción.</p>
     </a>
   </div>
