--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="efectos.css">
 </head>
 <header>
-        <h1 class="title">Categorias</h1>C:\Users\Vanesa Tascon\Documents\GitHub\ejemplogit\ejemplogit
+        <h1 class="title">Categorias</h1>
   </header>
     <main>
         <section class="gallery" aria-label="Categorias">
@@ -17,6 +17,7 @@
     <a href="comprar.html" class="card">
       <h2>COMPRAR</h2>
       <img src="IMAGENES/logo comprar.webp" alt="Comprar">
+      <p>Al darle una segunda vida a la ropa, reduces residuos, ahorras agua y frenas la locura del fast fashion.</p>
       <p>Al darle una segunda vida a la ropa, reduces residuos, ahorras agua y frenas la locura del fast fashion.</p>
     </a>
 
